fixed the align problem

--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -67,6 +67,7 @@ img.productSmallImg:hover {
   padding: 5px;
   margin: 10px;
   min-height: 437px;
+  vertical-align: top;
 }
 
 p.pricePrev {
